make svg fullscreen

--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>台灣行政區</title>
+	<title>台灣行政區</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body>
+<body style="margin: 0; overflow: hidden">
 <!--
 <object type="image/svg+xml" data="COUNTY.svg" height="500">
 </object>
 -->
-<iframe src="COUNTY.svg" width = "800" height="800" scrolling="no" style="boder: 0;"></iframe>
+<iframe src="COUNTY.svg" scrolling="no" frameBorder="0" style="width: 100vw; height: 100vh; overflow: hidden"></iframe>
 <script type="module" src="main.js"></script>
 </body>
 </html>
