--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 <object type="image/svg+xml" data="COUNTY.svg" height="500">
 </object>
 -->
+<!--
 <iframe src="COUNTY.svg" scrolling="no" frameBorder="0" style="width: 100vw; height: 100vh; overflow: hidden"></iframe>
+i-->
+<div style="width: 100vw; height: 100vh" id="map"></div>
+<script src="d3/d3.min.js"></script>
 <script type="module" src="main.js"></script>
 </body>
 </html>
