--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>台灣行政區</title>
+	<title>台灣行政區測驗</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body style="margin: 0; overflow: hidden">
