--- a/tpc/index.html
+++ b/tpc/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
+<!--
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-P6VSM1DTN4"></script>
 	<script>
 	  window.dataLayer = window.dataLayer || [];
@@ -10,17 +11,12 @@
 	
 	  gtag('config', 'G-P6VSM1DTN4');
 	</script>
-	<title>台灣行政區測驗</title>
+-->
+	<title>臺北市行政區測驗</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="../style.css" rel="stylesheet" type="text/css">
 </head>
 <body style="margin: 0; overflow: hidden">
-<!--
-<object type="image/svg+xml" data="COUNTY.svg" height="500">
-</object>
--->
-<!--
-<iframe src="COUNTY.svg" scrolling="no" frameBorder="0" style="width: 100vw; height: 100vh; overflow: hidden"></iframe>
-i-->
 <div style="width: 100vw; height: 100vh" id="map"></div>
 <script type="module" src="main.js"></script>
 </body>
