--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body style="margin: 0; overflow: hidden">
 <div style="width: 100vw; height: 100vh" id="map"></div>
-<script type="module" src="main.js"></script>
+<script src="d3/d3.min.js"></script>
+<script src="game.js"></script>
+<script>
+	startGame("COUNTY.svg", "300 -50 300 450")
+</script>
 </body>
 </html>
