--- a/tpc/index.html
+++ b/tpc/index.html
@@ -1,21 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-P6VSM1DTN4"></script>
-	<script>
-	  window.dataLayer = window.dataLayer || [];
-	  function gtag(){dataLayer.push(arguments);}
-	  gtag('js', new Date());
-	
-	  gtag('config', 'G-P6VSM1DTN4');
-	</script>
+	<script src="../addGA.js"></script>
 	<title>臺北市行政區測驗</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="../style.css" rel="stylesheet" type="text/css">
 </head>
 <body style="margin: 0; overflow: hidden">
 <div style="width: 100vw; height: 100vh" id="map"></div>
-<script type="module" src="main.js"></script>
+<script src="../d3/d3.min.js"></script>
+<script src="../game.js"></script>
+<script>
+	startGame("tpc.svg", "0 -170 700 1200")
+</script>
 </body>
 </html>
