--- a/tpe/index.html
+++ b/tpe/index.html
@@ -11,7 +11,7 @@
 <script src="../d3/d3.min.js"></script>
 <script src="../game.js"></script>
 <script>
-	startGame("tpc.svg", "0 -170 700 1200")
+	startGame("tpe.svg", "0 -170 700 1200")
 </script>
 </body>
 </html>
