--- a/keelung.html
+++ b/keelung.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<script src="addGA.js"></script>
-	<title>臺北市行政區測驗</title>
+	<title>基隆市行政區測驗</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="style.css" rel="stylesheet" type="text/css">
 </head>
@@ -11,7 +11,7 @@
 <script src="d3/d3.min.js"></script>
 <script src="game.js"></script>
 <script>
-	startGame("svg/tpe.svg", "0 -170 700 1200")
+	startGame("svg/keelung.svg", "0 690 300 300")
 </script>
 </body>
 </html>
