--- a/index.html
+++ b/index.html
@@ -3,15 +3,32 @@
 <head>
 	<script src="addGA.js"></script>
 	<title>台灣行政區測驗</title>
+	<!--
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="style.css" rel="stylesheet" type="text/css">
+	-->
+<style>
+body{
+	margin-left: 20%;
+}
+h1{}
+div{
+	display: block;
+	margin: 10px;
+}
+</style>
 </head>
-<body style="margin: 0; overflow: hidden">
-<div style="width: 100vw; height: 100vh" id="map"></div>
-<script src="d3/d3.min.js"></script>
-<script src="game.js"></script>
-<script>
-	startGame("COUNTY.svg", "300 -50 300 450")
-</script>
+<body>
+	<h1>台灣行政區測驗</h1>
+	<div><a href="counties">全縣市</a></div>
+	<div><a href="keelung">基隆市</a></div>
+	<div><a href="taipei">臺北市</a></div>
+	<div><a href="newtaipei">新北市</a></div>
+	<div><a href="taoyuan">桃園市</a></div>
+	<div><a href="hsinchucounty">新竹縣</a></div>
+	<div><a href="hsinchucity">新竹市</a></div>
+	<div><a href="miaoli">苗栗縣</a></div>
+	<div><a href="taichung">臺中市</a></div>
+	<!--彰化縣南投縣雲林縣嘉義縣嘉義市臺南市高雄市屏東縣宜蘭縣花蓮縣臺東縣澎湖縣金門縣連江縣-->
 </body>
 </html>
