--- a/index.html
+++ b/index.html
@@ -11,15 +11,18 @@
 body{
 	margin-left: 20%;
 }
-h1{}
+div.container{
+	column-count: 3;
+}
 div{
 	display: block;
-	margin: 10px;
+	margin-bottom: 10px;
 }
 </style>
 </head>
 <body>
 	<h1>台灣行政區測驗</h1>
+	<div class="container">
 	<div><a href="counties">全縣市</a></div>
 	<div><a href="keelung">基隆市</a></div>
 	<div><a href="taipei">臺北市</a></div>
@@ -29,6 +32,20 @@ div{
 	<div><a href="hsinchucity">新竹市</a></div>
 	<div><a href="miaoli">苗栗縣</a></div>
 	<div><a href="taichung">臺中市</a></div>
-	<!--彰化縣南投縣雲林縣嘉義縣嘉義市臺南市高雄市屏東縣宜蘭縣花蓮縣臺東縣澎湖縣金門縣連江縣-->
+	<div><a href="changhua">彰化縣</a></div>
+	<div><a href="nantou">南投縣</a></div>
+	<div><a href="yunlin">雲林縣</a></div>
+	<div><a href="chiayicounty">嘉義縣</a></div>
+	<div><a href="chiayicity">嘉義市</a></div>
+	<div><a href="tainan">臺南市</a></div>
+	<div><a href="kaohsiung">高雄市</a></div>
+	<div><a href="pingtung">屏東縣</a></div>
+	<div><a href="yilan">宜蘭縣</a></div>
+	<div><a href="hualien">花蓮縣</a></div>
+	<div><a href="taitung">臺東縣</a></div>
+	<div><a href="penghu">澎湖縣</a></div>
+	<div><a href="kinmen">金門縣</a></div>
+	<div><a href="lienchiang">連江縣</a></div>
+	</div>
 </body>
 </html>
