--- a/pingtung.html
+++ b/pingtung.html
@@ -2,16 +2,21 @@
 <html>
 <head>
 	<script src="addGA.js"></script>
-	<title>台灣縣市測驗</title>
+	<title>屏東縣行政區測驗</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="style.css" rel="stylesheet" type="text/css">
+<style>
+path{
+	stroke-width: 1px;
+}
+</style>
 </head>
 <body style="margin: 0; overflow: hidden">
 <div style="width: 100vw; height: 100vh" id="map"></div>
 <script src="d3/d3.min.js"></script>
 <script src="game.js"></script>
 <script>
-	startGame("COUNTY.svg", "300 -50 300 450")
+	startGame("svg/pingtung.svg", "0 -450 1000 2000")
 </script>
 </body>
 </html>
