--- a/taitung.html
+++ b/taitung.html
@@ -2,16 +2,21 @@
 <html>
 <head>
 	<script src="addGA.js"></script>
-	<title>台灣縣市測驗</title>
+	<title>臺東縣行政區測驗</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="style.css" rel="stylesheet" type="text/css">
+<style>
+path{
+	stroke-width:0.5px;
+}
+</style>
 </head>
 <body style="margin: 0; overflow: hidden">
 <div style="width: 100vw; height: 100vh" id="map"></div>
 <script src="d3/d3.min.js"></script>
 <script src="game.js"></script>
 <script>
-	startGame("COUNTY.svg", "300 -50 300 450")
+	startGame("svg/taitung.svg", "0 -400 800 1800")
 </script>
 </body>
 </html>
