--- a/yunlin.html
+++ b/yunlin.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<script src="addGA.js"></script>
-	<title>台灣縣市測驗</title>
+	<title>雲林縣行政區測驗</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="style.css" rel="stylesheet" type="text/css">
 </head>
@@ -11,7 +11,7 @@
 <script src="d3/d3.min.js"></script>
 <script src="game.js"></script>
 <script>
-	startGame("COUNTY.svg", "300 -50 300 450")
+	startGame("svg/yunlin.svg", "50 -150 700 700")
 </script>
 </body>
 </html>
